--- a/app/src/main/res/layout/item_moim_diary_activity_participants.xml
+++ b/app/src/main/res/layout/item_moim_diary_activity_participants.xml
@@ -1,36 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- 그룹 다이어리 정산 다이얼로그 구성원, GroupPayMemberRVAdapter-->
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_marginVertical="8dp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-
-    <CheckBox
-        android:id="@+id/item_activity_participants_checkbox"
-        android:layout_width="20dp"
-        android:layout_height="20dp"
-        android:checked="false"
-        android:button="@null"
-        android:background="@drawable/selector_checkbox"
-        android:padding="6dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"/>
-
-    <TextView
-        android:id="@+id/item_activity_participants_nickname_tv"
+    
+    <data>
+        <variable
+            name="isEdit"
+            type="Boolean" />
+        <variable
+            name="hasDiary"
+            type="Boolean" />
+    </data>
+    
+    <androidx.constraintlayout.widget.ConstraintLayout 
         android:layout_width="wrap_content"
-        android:layout_height="25dp"
-        android:text="앨리"
-        android:textColor="@color/black"
-        android:textSize="14sp"
-        android:gravity="center_vertical"
-        android:layout_marginStart="7dp"
-        android:paddingEnd="10dp"
-        app:layout_constraintTop_toTopOf="@id/item_activity_participants_checkbox"
-        app:layout_constraintBottom_toBottomOf="@id/item_activity_participants_checkbox"
-        app:layout_constraintStart_toEndOf="@id/item_activity_participants_checkbox"
-        tools:ignore="RtlSymmetry" />
+        android:layout_height="wrap_content"
+        android:layout_marginVertical="8dp">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <CheckBox
+            android:id="@+id/item_activity_participants_checkbox"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:checked="false"
+            android:button="@null"
+            android:background="@drawable/selector_checkbox"
+            android:padding="6dp"
+            android:clickable="@{hasDiary &amp;&amp; isEdit ? true : false}"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"/>
+
+        <TextView
+            android:id="@+id/item_activity_participants_nickname_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="25dp"
+            android:text="앨리"
+            android:textColor="@color/black"
+            android:textSize="14sp"
+            android:gravity="center_vertical"
+            android:layout_marginStart="7dp"
+            android:paddingEnd="10dp"
+            app:layout_constraintTop_toTopOf="@id/item_activity_participants_checkbox"
+            app:layout_constraintBottom_toBottomOf="@id/item_activity_participants_checkbox"
+            app:layout_constraintStart_toEndOf="@id/item_activity_participants_checkbox"
+            tools:ignore="RtlSymmetry" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
