--- a/app/src/main/res/layout/item_moim_diary_diary.xml
+++ b/app/src/main/res/layout/item_moim_diary_diary.xml
@@ -1,16 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<layout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <data>
+        <import type="android.view.View" />
         <variable
             name="diary"
             type="com.mongmong.namo.domain.model.DiaryDetail" />
+        <variable
+            name="isEdit"
+            type="Boolean" />
+        <variable
+            name="hasDiary"
+            type="Boolean" />
     </data>
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        xmlns:app="http://schemas.android.com/apk/res-auto">
+        android:layout_height="match_parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -32,13 +39,51 @@
                 app:layout_constraintStart_toStartOf="parent" />
 
             <androidx.appcompat.widget.AppCompatImageButton
+                android:id="@+id/appCompatImageButton"
                 android:layout_width="20dp"
                 android:layout_height="20dp"
-                android:src="@drawable/ic_private"
+                android:layout_marginStart="8dp"
                 android:background="@color/transparent"
-                android:layout_margin="20dp"
+                android:src="@drawable/ic_private"
+                app:layout_constraintBottom_toBottomOf="@+id/diary_title_tv"
+                app:layout_constraintStart_toEndOf="@+id/diary_title_tv"
+                app:layout_constraintTop_toTopOf="@+id/diary_title_tv"
+                app:tint="@color/main_text" />
+            <ImageView
+                android:id="@+id/diary_edit_btn"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:padding="5dp"
+                android:backgroundTint="@color/transparent"
+                android:src="@drawable/ic_edit"
+                android:clickable="@{hasDiary &amp;&amp; !isEdit ? true: false}"
+                app:layout_constraintTop_toTopOf="@id/diary_delete_btn"
+                app:layout_constraintBottom_toBottomOf="@id/diary_delete_btn"
+                app:layout_constraintEnd_toStartOf="@id/diary_btn_divider"
+                app:tint="@{hasDiary &amp;&amp; !isEdit? @color/main_text : @color/text_unselected}"/>
+            <View
+                android:id="@+id/diary_btn_divider"
+                android:layout_width="1dp"
+                android:layout_height="12dp"
+                android:background="@color/text_unselected"
+                android:layout_marginEnd="2dp"
+                app:layout_constraintTop_toTopOf="@id/diary_delete_btn"
+                app:layout_constraintBottom_toBottomOf="@id/diary_delete_btn"
+                app:layout_constraintEnd_toStartOf="@id/diary_delete_btn"/>
+
+            <ImageView
+                android:id="@+id/diary_delete_btn"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:backgroundTint="@color/transparent"
+                android:padding="5dp"
+                android:layout_marginEnd="20dp"
+                android:src="@drawable/ic_delete"
+                app:layout_constraintBottom_toBottomOf="@+id/diary_title_tv"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="@+id/diary_title_tv"
+                android:clickable="@{hasDiary? true : false}"
+                app:tint="@{hasDiary? @color/main_text : @color/text_unselected}"/>
             <TextView
                 android:id="@+id/diary_enjoy_title_tv"
                 style="@style/content_bold"
@@ -49,11 +94,13 @@
                 android:layout_marginStart="20dp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/diary_title_tv" />
+
             <LinearLayout
+                android:id="@+id/linearLayout2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
                 android:layout_marginEnd="20dp"
+                android:orientation="horizontal"
                 app:layout_constraintBottom_toBottomOf="@+id/diary_enjoy_title_tv"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="@+id/diary_enjoy_title_tv">
@@ -64,22 +111,25 @@
                     android:layout_height="18dp"
                     android:contentDescription="Heart 1"
                     android:src="@drawable/ic_favorite"
+                    android:clickable="@{hasDiary &amp;&amp; !isEdit ? false : true}"
                     app:tint="@{diary.enjoyRating >= 1 ? @color/main : @color/text_unselected}" />
 
                 <ImageView
                     android:id="@+id/diary_enjoy_2_iv"
                     android:layout_width="18dp"
                     android:layout_height="18dp"
-                    android:src="@drawable/ic_favorite"
                     android:layout_marginStart="4dp"
+                    android:src="@drawable/ic_favorite"
+                    android:clickable="@{hasDiary &amp;&amp; !isEdit ? false : true}"
                     app:tint="@{diary.enjoyRating >= 2 ? @color/main : @color/text_unselected}" />
 
                 <ImageView
                     android:id="@+id/diary_enjoy_3_iv"
                     android:layout_width="18dp"
                     android:layout_height="18dp"
-                    android:src="@drawable/ic_favorite"
                     android:layout_marginStart="4dp"
+                    android:src="@drawable/ic_favorite"
+                    android:clickable="@{hasDiary &amp;&amp; !isEdit ? false : true}"
                     app:tint="@{diary.enjoyRating >= 3 ? @color/main : @color/text_unselected}" />
             </LinearLayout>
 
@@ -94,9 +144,10 @@
                 android:hint="@string/diary_input"
                 android:inputType="textMultiLine"
                 android:minHeight="160dp"
-                android:paddingHorizontal="16dp"
+                android:paddingHorizontal="20dp"
                 android:paddingVertical="12dp"
                 android:text="@={diary.content}"
+                android:enabled="@{hasDiary &amp;&amp; !isEdit ? false : true}"
                 android:layout_marginHorizontal="20dp"
                 android:textColorHint="@color/text_placeholder"
                 app:layout_constraintTop_toBottomOf="@+id/diary_enjoy_title_tv"
@@ -141,6 +192,7 @@
                     android:layout_gravity="center"
                     android:layout_marginStart="7dp"
                     android:background="@drawable/bg_gallery_dotted"
+                    android:visibility="@{isEdit ? View.VISIBLE: View.GONE}"
                     android:layerType="software"
                     android:scaleType="centerInside"
                     android:src="@drawable/ic_gallery" />
