--- a/app/src/main/res/layout/item_moim_diary_image.xml
+++ b/app/src/main/res/layout/item_moim_diary_image.xml
@@ -2,6 +2,13 @@
 <layout xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <data>
+        <variable
+            name="isEdit"
+            type="Boolean" />
+        <import type="android.view.View" />
+    </data>
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
@@ -14,6 +21,7 @@
             app:civ_border_color="@color/white"
             app:civ_border_width="2dp"
             android:elevation="3dp"
+            android:visibility="@{isEdit ? View.VISIBLE : View.GONE}"
             android:layout_marginTop="-5dp"
             android:layout_marginEnd="-5dp"
             app:layout_constraintTop_toTopOf="@id/image_iv"
