--- a/app/src/main/res/layout/item_moim_diary_activity.xml
+++ b/app/src/main/res/layout/item_moim_diary_activity.xml
@@ -47,9 +47,7 @@
                     android:text="@{activity.title}"
                     android:enabled="@{hasDiary &amp;&amp; isEdit ? true : false}"
                     android:textColorHint="@color/text_unselected"
-                    android:textSize="18sp"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    android:textSize="18sp"/>
                 <ImageView
                     android:id="@+id/activity_edit_btn"
                     android:layout_width="30dp"
@@ -58,16 +56,23 @@
                     android:backgroundTint="@color/transparent"
                     android:src="@drawable/ic_edit"
                     android:layout_gravity="center_vertical"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    android:clickable="@{hasDiary &amp;&amp; !isEdit? true : false}"
-                    app:tint="@{hasDiary &amp;&amp; !isEdit? @color/main_text : @color/text_unselected}"/>
+                    android:visibility="@{hasDiary &amp;&amp; !isEdit? View.VISIBLE : View.GONE}" />
+                <ImageView
+                    android:id="@+id/activity_view_btn"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:padding="5dp"
+                    android:backgroundTint="@color/transparent"
+                    android:src="@drawable/ic_view"
+                    android:layout_gravity="center_vertical"
+                    android:visibility="@{hasDiary &amp;&amp; isEdit? View.VISIBLE : View.GONE}" />
                 <View
                     android:layout_width="1dp"
                     android:layout_height="12dp"
                     android:background="@color/text_unselected"
                     android:layout_gravity="center"
-                    android:layout_marginHorizontal="2dp"/>
+                    android:layout_marginHorizontal="2dp"
+                    android:visibility="@{hasDiary ? View.VISIBLE : View.GONE}" />
                 <ImageView
                     android:id="@+id/activity_delete_btn"
                     android:layout_width="30dp"
@@ -77,10 +82,7 @@
                     android:padding="5dp"
                     android:backgroundTint="@color/transparent"
                     android:src="@drawable/ic_delete"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    android:clickable="@{hasDiary ? true : false}"
-                    app:tint="@{hasDiary? @color/main_text : @color/text_unselected}"/>
+                    android:visibility="@{hasDiary ? View.VISIBLE : View.GONE}" />
             </LinearLayout>
             <LinearLayout
                 android:layout_width="match_parent"
@@ -93,17 +95,12 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="@string/schedule_start"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/activity_title_tv" />
+                    android:text="@string/schedule_start"/>
                 <LinearLayout
                     android:id="@+id/activity_start_content_layout"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent">
+                    android:orientation="horizontal">
 
                     <TextView
                         android:id="@+id/activity_start_date_tv"
@@ -144,18 +141,13 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="@string/schedule_end"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/activity_start_date_title_tv" />
+                    android:text="@string/schedule_end"/>
 
                 <LinearLayout
                     android:id="@+id/activity_end_content_layout"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent">
+                    android:orientation="horizontal">
 
                     <TextView
                         android:id="@+id/activity_end_date_tv"
@@ -245,9 +237,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="@string/diary_place"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/activity_end_date_title_tv" />
+                    android:text="@string/diary_place"/>
 
                 <TextView
                     android:id="@+id/activity_place_tv"
@@ -257,10 +247,7 @@
                     android:drawableEnd="@drawable/ic_arrow_right"
                     android:drawablePadding="8dp"
                     android:text="@{activity.location.locationName.empty ? @string/diary_no_place : activity.location.locationName}"
-                    android:clickable="@{hasDiary &amp;&amp; isEdit ? true : false}"
-                    app:layout_constraintBottom_toBottomOf="@+id/activity_place_title_tv"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="@+id/activity_place_title_tv" />
+                    android:clickable="@{hasDiary &amp;&amp; isEdit ? true : false}" />
             </LinearLayout>
 
 
@@ -271,8 +258,7 @@
                 android:layout_marginHorizontal="15dp"
                 android:layout_marginTop="20dp"
                 android:nestedScrollingEnabled="false"
-                android:orientation="horizontal"
-                app:layout_constraintTop_toBottomOf="@id/activity_place_title_tv">
+                android:orientation="horizontal">
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/activity_images_rv"
@@ -348,10 +334,7 @@
                     android:layout_height="wrap_content"
                     android:drawableEnd="@drawable/ic_arrow_right"
                     android:drawablePadding="8dp"
-                    android:text='@{activity.payment.totalAmount == 0 ? @string/moim_diary_none : "총 " + String.valueOf(activity.payment.totalAmount) + "원"}'
-                    app:layout_constraintBottom_toBottomOf="@+id/activity_place_title_tv"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="@+id/activity_place_title_tv" />
+                    android:text='@{activity.payment.totalAmount == 0 ? @string/moim_diary_none : "총 " + String.valueOf(activity.payment.totalAmount) + "원"}' />
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
