--- a/app/src/main/res/layout/item_moim_diary_diary.xml
+++ b/app/src/main/res/layout/item_moim_diary_diary.xml
@@ -56,11 +56,23 @@
                 android:padding="5dp"
                 android:backgroundTint="@color/transparent"
                 android:src="@drawable/ic_edit"
-                android:clickable="@{hasDiary &amp;&amp; !isEdit ? true: false}"
                 app:layout_constraintTop_toTopOf="@id/diary_delete_btn"
                 app:layout_constraintBottom_toBottomOf="@id/diary_delete_btn"
                 app:layout_constraintEnd_toStartOf="@id/diary_btn_divider"
-                app:tint="@{hasDiary &amp;&amp; !isEdit? @color/main_text : @color/text_unselected}"/>
+                android:visibility="@{hasDiary &amp;&amp; !isEdit? View.VISIBLE : View.GONE}" />
+
+            <ImageView
+                android:id="@+id/diary_view_btn"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_gravity="center_vertical"
+                android:backgroundTint="@color/transparent"
+                android:padding="5dp"
+                android:src="@drawable/ic_view"
+                app:layout_constraintTop_toTopOf="@id/diary_delete_btn"
+                app:layout_constraintBottom_toBottomOf="@id/diary_delete_btn"
+                app:layout_constraintEnd_toStartOf="@id/diary_btn_divider"
+                android:visibility="@{hasDiary &amp;&amp; isEdit? View.VISIBLE : View.GONE}" />
             <View
                 android:id="@+id/diary_btn_divider"
                 android:layout_width="1dp"
@@ -69,7 +81,8 @@
                 android:layout_marginEnd="2dp"
                 app:layout_constraintTop_toTopOf="@id/diary_delete_btn"
                 app:layout_constraintBottom_toBottomOf="@id/diary_delete_btn"
-                app:layout_constraintEnd_toStartOf="@id/diary_delete_btn"/>
+                app:layout_constraintEnd_toStartOf="@id/diary_delete_btn"
+                android:visibility="@{hasDiary ? View.VISIBLE : View.GONE}" />
 
             <ImageView
                 android:id="@+id/diary_delete_btn"
@@ -82,8 +95,7 @@
                 app:layout_constraintBottom_toBottomOf="@+id/diary_title_tv"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="@+id/diary_title_tv"
-                android:clickable="@{hasDiary? true : false}"
-                app:tint="@{hasDiary? @color/main_text : @color/text_unselected}"/>
+                android:visibility="@{hasDiary ? View.VISIBLE : View.GONE}" />
             <TextView
                 android:id="@+id/diary_enjoy_title_tv"
                 style="@style/content_bold"
