--- a/app/src/main/res/layout/dialog_activity_participants.xml
+++ b/app/src/main/res/layout/dialog_activity_participants.xml
@@ -38,7 +38,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/activity_tag"
+                android:text="@string/activity_participants"
                 android:textColor="@color/black"
                 android:textSize="15sp"
                 android:textStyle="bold"
