✨ Feat: 추가/수정 시 로딩 구현
Related to: #323

--- a/app/src/main/res/layout/activity_moim_diary_detail.xml
+++ b/app/src/main/res/layout/activity_moim_diary_detail.xml
@@ -5,10 +5,15 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
-        <import type="java.math.BigDecimal"/>
+
+        <import type="java.math.BigDecimal" />
+
         <import type="com.mongmong.namo.presentation.utils.DiaryDateConverter" />
+
         <import type="android.text.TextUtils" />
+
         <import type="android.view.View" />
+
         <variable
             name="viewModel"
             type="com.mongmong.namo.presentation.ui.community.diary.MoimDiaryViewModel" />
@@ -79,10 +84,10 @@
                         android:id="@+id/moim_diary_date_circle_iv"
                         android:layout_width="80dp"
                         android:layout_height="80dp"
+                        android:layout_marginStart="25dp"
                         android:backgroundTint="@color/white"
                         app:cardCornerRadius="80dp"
                         app:cardElevation="5dp"
-                        android:layout_marginStart="25dp"
                         app:layout_constraintBottom_toBottomOf="@+id/moim_diary_place_tv"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="@+id/moim_diary_date_tv" />
@@ -177,8 +182,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="25dp"
-                        android:padding="5dp"
                         android:onClick="@{() -> viewModel.toggleIsParticipantVisible()}"
+                        android:padding="5dp"
                         android:rotation="@{viewModel.isParticipantVisible ? 180 : 0}"
                         android:src="@drawable/ic_arrow_down_bold"
                         android:visibility="visible"
@@ -193,16 +198,17 @@
                         android:layout_marginStart="30dp"
                         android:layout_marginTop="15dp"
                         android:backgroundTint="@color/main_text"
+                        android:visibility="@{viewModel.isParticipantVisible ? View.VISIBLE : View.GONE}"
                         app:cardCornerRadius="42dp"
                         app:cardElevation="0dp"
-                        android:visibility="@{viewModel.isParticipantVisible ? View.VISIBLE : View.GONE}"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@id/moim_diary_people_tv" >
+                        app:layout_constraintTop_toBottomOf="@id/moim_diary_people_tv">
+
                         <ImageView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:src="@drawable/ic_calendar"
                             android:layout_gravity="center"
+                            android:src="@drawable/ic_calendar"
                             app:tint="@color/white" />
                     </androidx.cardview.widget.CardView>
 
@@ -244,6 +250,7 @@
                     <TextView
                         android:id="@+id/moim_payment_tv"
                         style="@style/content_regular"
+                        totalAmount="@{viewModel.moimPayment.totalAmount}"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginVertical="12dp"
@@ -251,7 +258,6 @@
                         android:drawableEnd="@drawable/ic_arrow_right"
                         android:drawablePadding="8dp"
                         android:drawableTint="@color/text_unselected"
-                        totalAmount="@{viewModel.moimPayment.totalAmount}"
                         android:textColor="@{viewModel.moimPayment.totalAmount == BigDecimal.ZERO ? @color/text_unselected : @color/main_text}" />
                 </LinearLayout>
 
@@ -275,9 +281,9 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_marginBottom="30dp"
-                    android:visibility="@{viewModel.diarySchedule.hasDiary &amp;&amp; viewModel.isEditMode ? View.VISIBLE : View.GONE}"
                     android:background="@drawable/bg_basic_outline_btn"
-                    android:paddingHorizontal="25dp">
+                    android:paddingHorizontal="25dp"
+                    android:visibility="@{viewModel.diarySchedule.hasDiary &amp;&amp; viewModel.isEditMode ? View.VISIBLE : View.GONE}">
 
                     <ImageView
                         android:layout_width="18dp"
@@ -307,10 +313,27 @@
             android:background="@{viewModel.diaryChanged ? @color/main : @color/text_unselected}"
             android:enabled="@{viewModel.diaryChanged}"
             android:text="@{viewModel.diarySchedule.hasDiary ? @string/diary_changes_save : @string/diary_add}"
-            android:visibility="@{!viewModel.diarySchedule.hasDiary ? View.VISIBLE : viewModel.isEditMode ? View.VISIBLE : View.GONE}"
             android:textAlignment="center"
             android:textColor="@color/white"
+            android:visibility="@{!viewModel.diarySchedule.hasDiary ? View.VISIBLE : viewModel.isEditMode ? View.VISIBLE : View.GONE}"
             app:layout_constraintBottom_toBottomOf="parent" />
+        <FrameLayout
+            android:id="@+id/moim_diary_loading"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/dimed_light"
+            android:clickable="true"
+            android:focusable="true"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <ProgressBar
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center" />
+
+        </FrameLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
 
