--- a/app/src/main/res/layout/fragment_friend.xml
+++ b/app/src/main/res/layout/fragment_friend.xml
@@ -71,12 +71,14 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/friend_list_rv"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:layout_height="wrap_content"
             android:paddingHorizontal="20dp"
             android:layout_marginTop="20dp"
             android:visibility="@{viewModel.friendList.empty ? View.GONE : View.VISIBLE}"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             tools:listitem="@layout/item_friend"
+            app:layout_constraintVertical_bias="0"
+            app:layout_constrainedHeight="true"
             app:layout_constraintTop_toBottomOf="@id/friend_search_et"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"/>
